// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileNavigation - Snapshots > matches snapshot for ProfileNavigation with different configurations 1`] = `
<div
  class="flex-row gap-3 lg:gap-6 justify-between py-6 custom-nav"
  data-testid="container"
>
  <button
    class="rounded-full flex-1 md:flex-0 w-full"
    data-size="lg"
    data-testid="button-secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-left mr-2 h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 19-7-7 7-7"
      />
      <path
        d="M19 12H5"
      />
    </svg>
    Previous
  </button>
  <button
    class="rounded-full flex-1 md:flex-0 w-full"
    data-size="lg"
    data-testid="button-default"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-right mr-2 h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 12h14"
      />
      <path
        d="m12 5 7 7-7 7"
      />
    </svg>
    Complete
  </button>
</div>
`;

exports[`ProfileNavigation - Snapshots > matches snapshot for ProfileNavigation with disabled states 1`] = `
<div
  class="flex-row gap-3 lg:gap-6 justify-between py-6"
  data-testid="container"
>
  <button
    class="rounded-full flex-1 md:flex-0 w-full"
    data-size="lg"
    data-testid="button-secondary"
    disabled=""
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-left mr-2 h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 19-7-7 7-7"
      />
      <path
        d="M19 12H5"
      />
    </svg>
    Back
  </button>
  <button
    class="rounded-full flex-1 md:flex-0 w-full"
    data-size="lg"
    data-testid="button-default"
    disabled=""
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-right mr-2 h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 12h14"
      />
      <path
        d="m12 5 7 7-7 7"
      />
    </svg>
    Finish
  </button>
</div>
`;

exports[`ProfileNavigation - Snapshots > matches snapshot for ProfileNavigation with hidden continue button 1`] = `
<div
  class="flex-row gap-3 lg:gap-6 justify-between py-6"
  data-testid="container"
>
  <button
    class="rounded-full flex-1 md:flex-0 w-full"
    data-size="lg"
    data-testid="button-secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-left mr-2 h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 19-7-7 7-7"
      />
      <path
        d="M19 12H5"
      />
    </svg>
    Back
  </button>
</div>
`;

exports[`ProfileNavigation - Snapshots > matches snapshot for ProfileNavigation with loading state 1`] = `
<div
  class="flex-row gap-3 lg:gap-6 justify-between py-6"
  data-testid="container"
>
  <button
    class="rounded-full flex-1 md:flex-0 w-full"
    data-size="lg"
    data-testid="button-secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-left mr-2 h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 19-7-7 7-7"
      />
      <path
        d="M19 12H5"
      />
    </svg>
    Back
  </button>
  <button
    class="rounded-full flex-1 md:flex-0 w-full"
    data-size="lg"
    data-testid="button-default"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-loader-circle mr-2 h-4 w-4 animate-spin"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
    Finish
  </button>
</div>
`;

exports[`ProfileNavigation - Snapshots > matches snapshot for default ProfileNavigation 1`] = `
<div
  class="flex-row gap-3 lg:gap-6 justify-between py-6"
  data-testid="container"
>
  <button
    class="rounded-full flex-1 md:flex-0 w-full"
    data-size="lg"
    data-testid="button-secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-left mr-2 h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m12 19-7-7 7-7"
      />
      <path
        d="M19 12H5"
      />
    </svg>
    Back
  </button>
  <button
    class="rounded-full flex-1 md:flex-0 w-full"
    data-size="lg"
    data-testid="button-default"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-arrow-right mr-2 h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5 12h14"
      />
      <path
        d="m12 5 7 7-7 7"
      />
    </svg>
    Finish
  </button>
</div>
`;
